tests/NormalTests/paczka1/fuzzy1/67224549.err
Error in line 21: hmuUQBDDy1u S713 154,4
Error in line 22: hmuUQBDDy1u A225 50,2
